# templates-uv-ruff

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
app/tests/: test_main.py
app/tests/utils/: test_greet.py
